--- a/Generate-Menu-Image-Info.plist
+++ b/Generate-Menu-Image-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MENU_BOARD_URL</key>
+	<string>$(MENU_BOARD_URL)</string>
 	<key>API_BASE_URL</key>
 	<string>$(API_BASE_URL)</string>
 	<key>NSAppTransportSecurity</key>
